cabal-version: 3.0

name:                   cardano-api-gen
version:                1.35.4
description:            The cardano api
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md

common base                         { build-depends: base                             >= 4.14       && < 4.15     }

common project-config
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

common maybe-unix
  if !os(windows)
     build-depends:    unix

library
  import:               base, project-config

  visibility:           public

  hs-source-dirs:       gen

  exposed-modules:      Gen.Cardano.Api
                        Gen.Cardano.Api.Metadata
                        Gen.Cardano.Api.Typed
                        Gen.Cardano.Crypto.Seed
                        Gen.Hedgehog.Roundtrip.Bech32
                        Gen.Hedgehog.Roundtrip.CBOR

  build-depends:        aeson             >= 1.5.6.0
                      , base16-bytestring
                      , bytestring
                      , cardano-api
                      , cardano-binary
                      , cardano-crypto-class
                      , cardano-crypto-test
                      , cardano-ledger-alonzo
                      , cardano-ledger-byron-test
                      , cardano-ledger-core
                      , cardano-prelude
                      , containers
                      , hedgehog
                      , plutus-core
                      , cardano-ledger-shelley
                      , text
